--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-act">
             <div class="portfolio-wrap">
-              <img src="assets/img/1.png" class="img-fluid" alt="">
+              <img src="assets/img/package/Post Feed-Package 3n2d Villa + Helicopter.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Luxury Retreat</h4>
                 <p>3N2D Stay</p>
