--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Love Bali Villas</title>
-  <meta content="" name="Discover unparalleled luxury and personalized hospitality with Love Bali Villas. Our villa management in Bali offers exquisite accommodations, breathtaking views, and exceptional services for an unforgettable escape. Book your dream villa today!">
-  <meta content="" name="Love Bali Villas, @lovebalivillas, Love Bali Villas Blogs, Expedia Partner, Villa in Bali, Luxury Villa in Bali, Bali Villas, Love Bali, Bali, Love Bali Villa, Love Property Bali, Love Villas, Love Villa, honeymoon villa in Bali">
+  <meta name="Descriptions" content="Discover unparalleled luxury and personalized hospitality with Love Bali Villas. Our villa management in Bali offers exquisite accommodations, breathtaking views, and exceptional services for an unforgettable escape. Book your dream villa today!">
+  <meta name="Tag" content="Love Bali Villas, @lovebalivillas, Love Bali Villas Blogs, Expedia Partner, Villa in Bali, Luxury Villa in Bali, Bali Villas, Love Bali, Bali, Love Bali Villa, Love Property Bali, Love Villas, Love Villa, honeymoon villa in Bali">
 
   <!-- Favicons -->
   <link href="assets/img/favicon-32x32.png" rel="icon">
