--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                   <li><a href="https://space-villas-bali.lovebalivillas.pro/" target="_blank" > Social Media Manager </a></li>
                   <li><a href="http://cleaning-service.lovebalivillas.pro/" target="_blank" > Cleaning Service </a></li>
                   <li><a href="https://chef.lovebalivillas.pro/" target="_blank" > Chef </a></li>
-                  <li><a href="https://bidadari-villa.lovebalivillas.pro/" target="_blank" > Laundry Man (Soon) </a></li>
-                  <li><a href="https://lavana-villa.lovebalivillas.pro/" target="_blank" > The Nanny (Soon) </a></li>
-                  <li><a href="https://the-akmani-legian.lovebalivillas.pro/" target="_blank" > Personal Shopper (Soon) </a></li>
-                  <li><a href="https://the-akmani-legian.lovebalivillas.pro/" target="_blank" > Tour Guides (Soon) </a></li>
-                  <li><a href="http://blogs.lovebalivillas.pro/" target="_blank" > See More</a></li>
+                  <li><a href="#" target="_blank" > Laundry Man (Soon) </a></li>
+                  <li><a href="#" target="_blank" > The Nanny (Soon) </a></li>
+                  <li><a href="#" target="_blank" > Personal Shopper (Soon) </a></li>
+                  <li><a href="#" target="_blank" > Tour Guides (Soon) </a></li>
+                  <li><a href="#" target="_blank" > See More</a></li>
                 </ul>
               </li>
               <li class="dropdown"><a href="#"><span>Worldwide Listings</span> <i class="bi bi-chevron-right"></i></a>
@@ -86,7 +86,7 @@
 
     </div>
   </header><!-- End Header -->
-
+  
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
