--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <li><a class="nav-link scrollto active" href="https://www.lovebalivillas.pro/">Home</a></li>
          <li>  <a class="nav-link scrollto" href="http://blogs.lovebalivillas.pro/" target="_blank" >Blogs </a></li> 
           <li><a class="nav-link scrollto" href="https://things-to-do.lovebalivillas.pro" target="_blank" >Things To Do</a></li>
-          <li><a class="nav-link scrollto " href="https://expedia.com/affiliate/DaDGWET" target="_blank" >Cruise & Car Rental</a></li>
-                    <li><a class="nav-link scrollto " href="https://merchandise.lovebalivillas.pro/" target="_blank" > Merchandise </a></li>
+          <li><a class="nav-link scrollto " href="https://expedia.com/affiliate/DaDGWET" target="_blank" >Cruise & Car Rental </a></li>
+                    <li><a class="nav-link scrollto " href="https://merchandise.lovebalivillas.pro/" target="_blank" > Merchandise 🛒 </a></li>
           <ul> <li class="dropdown"><a href="#"><span>Services</span> <i class="bx bxs-hot icon-hot"></i> <i class="bi bi-chevron-down"></i></a> 
             <ul>
               <li class="dropdown"><a href="#"><span>Hire A Staff</span> <i class="bx bxs-hot icon-hot"></i> <i class="bi bi-chevron-right"></i></a>
@@ -86,6 +86,7 @@
 
     </div>
   </header><!-- End Header -->
+
   
   <!-- ======= Hero Section ======= -->
   <section id="hero">
