--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     </div>
   </header><!-- End Header -->
 
+    <main id="main">
   
   <!-- ======= Hero Section ======= -->
   <section id="hero">
