--- a/index.html
+++ b/index.html
@@ -731,17 +731,17 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Anya Dya, a visionary entrepreneur with a deep love for Bali, is the proud founder and CEO of Love Bali Villas. With her passion for creating unparalleled luxury experiences and her unwavering commitment to providing exceptional service, Anya has established Love Bali Villas as a premier villa management company in Bali. </p>
+          <p>Aliansyah Fernando (Aldo), a visionary entrepreneur with a deep love for Bali, is the proud founder and CEO of Love Bali Villas. With her passion for creating unparalleled luxury experiences and her unwavering commitment to providing exceptional service, Aldo has established Love Bali Villas as a premier villa management company in Bali. </p>
         </div>
 
         <div class="row">
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="member">
-              <img src="assets/img/Love Bali Villa Instagram Post.png" class="img-fluid" alt="">
+              <img src="assets/img/team/Copy of IMG_0578.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Anya Dya</h4>
+                  <h4>Aliansyah Fernando</h4>
                   <span>Founder & Chief Executive Officer</span>
                   <div class="social">
                     <a href="https://twitter.com/UpdateMymusic" target="_blank" ><i class="bi bi-twitter"></i></a>
