--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Aliansyah Fernando (Aldo), a visionary entrepreneur with a deep love for Bali, is the proud founder and CEO of Love Bali Villas. With her passion for creating unparalleled luxury experiences and her unwavering commitment to providing exceptional service, Aldo has established Love Bali Villas as a premier villa management company in Bali. </p>
+          <p>Aliansyah Fernando (Aldo), a visionary entrepreneur with a deep love for Bali, is the proud founder and CEO of Love Bali Villas. With his passion for creating unparalleled luxury experiences and his unwavering commitment to providing exceptional service, Aldo has established Love Bali Villas as a premier villa management company in Bali. </p>
         </div>
 
         <div class="row">
