--- a/index.html
+++ b/index.html
@@ -899,7 +899,10 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Love Bali Villas</h3>
+              <h3>PT. Love Bali Villas</h3>
+              <h3>NOMOR : AHU-067114.AH.01.30.Tahun 2023</h3>
+              <h3>NOMOR INDUK BERUSAHA: 1611210013395</h3>
+              <h3>NPWP: 0505 3809 3190 6000</h3>
               <p>
                 17, Petitenget Street, Seminyak,  <br>
                 Bali, Indonesia<br><br>
@@ -951,7 +954,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Love Bali Villas</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>PT. Love Bali Villas</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
       </div>
