--- a/index.html
+++ b/index.html
@@ -900,9 +900,9 @@
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
               <h3>PT. Love Bali Villas</h3>
-              <h3>NOMOR : AHU-067114.AH.01.30.Tahun 2023</h3>
-              <h3>NOMOR INDUK BERUSAHA: 1611210013395</h3>
-              <h3>NPWP: 0505 3809 3190 6000</h3>
+              <P>NOMOR : AHU-067114.AH.01.30.Tahun 2023</P>
+              <P>NOMOR INDUK BERUSAHA: 1611210013395</P>
+              <P>NPWP: 0505 3809 3190 6000</P>
               <p>
                 17, Petitenget Street, Seminyak,  <br>
                 Bali, Indonesia<br><br>
