--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@
         <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
 
         <div class="carousel-inner" role="listbox">
+          
+          <!-- Slide 1.1 -->
+          <div class="carousel-item active" style="background-image: url(assets/img/blog/buddha/8.jpg);">
+            <div class="carousel-container">
+              <div class="carousel-content">
+                <h2 class="animate__animated animate__fadeInDown"> Villa Buddha Berawa: Where Tropical Bliss Meets Mediterranean Charm in Berawa </h2>
+                <p class="animate__animated animate__fadeInUp">Villa Buddha Berawa is not just a villa; it's a tropical oasis nestled in the heart of Berawa, where the beauty of nature meets coastal elegance. This 2-bedroom villa offers an escape like no other, where lush greenery and Mediterranean charm create an enchanting fusion. </p>
+                <div>
+                  <a href="https://villa-buddha-berawa.lovebalivillas.pro/" target="_blank" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <!-- Slide 1 -->
           <div class="carousel-item active" style="background-image: url(assets/img/blog/arki/1.jpg);">
