--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
                 17, Petitenget Street, Seminyak,  <br>
                 Bali, Indonesia<br><br>
                 <strong>Mobile Phone:</strong> +62 881 0382 64537<br>
-                <strong>Email:</strong> lovepropertybali@gmail.com<br>
+                <strong>Email:</strong> info@lovebalivillas.pro<br>
               </p>
               <div class="social-links mt-3">
                 <a href="https://twitter.com/lovebali_villas" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
