--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
           <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
               <h3>Love Bali Villas</h3>
+<h4>"DREAM BIG, IDEAS MAKER, PROUD TO BE LOVE BALI VILLAS"</h4>
               <p>
                 Discover unparalleled luxury and personalized hospitality with Love Bali Villas. Our villa management in Bali offers exquisite accommodations, breathtaking views, and exceptional services for an unforgettable escape. Book your dream villa today!
               </p>
