--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
             <div class="contact-email">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">lovepropertybali@gmail.com</a></p>
+              <p><a href="mailto:info@example.com">info@lovebalivillas.pro</a></p>
             </div>
           </div>
 
