--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
             <div class="contact-phone">
               <i class="bi bi-phone"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+62 881 038264537</a></p>
+              <p><a href="+62881038264537">+62 881 038264537</a></p>
             </div>
           </div>
 
@@ -861,7 +861,7 @@
             <div class="contact-email">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@lovebalivillas.pro</a></p>
+              <p><a href="info@lovebalivillas.pro">info@lovebalivillas.pro</a></p>
             </div>
           </div>
 
