--- a/index.html
+++ b/index.html
@@ -740,32 +740,76 @@
     <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
 
-    <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
-      <div class="container">
+  <!-- ======= About Section ======= -->
+  <section id="about" class="about">
+    <div class="container">
 
-        <div class="section-title">
-          <h2>Team</h2>
-          <p>Aliansyah Fernando (Aldo), a visionary entrepreneur with a deep love for Bali, is the proud founder and CEO of Love Bali Villas. With his passion for creating unparalleled luxury experiences and his unwavering commitment to providing exceptional service, Aldo has established Love Bali Villas as a premier villa management company in Bali. </p>
+      <div class="row no-gutters">
+        <div class="image1 col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
+        <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
+          <div class="content d-flex flex-column justify-content-center">
+            <h3>Love Bali Villas - Building a Brighter Future Together</h3>
+            <p>
+              Love Bali Villas is thrilled to announce our collaboration with local fundraisers to support meaningful initiatives within our cherished Bali community. In a joint effort to give back and make a positive impact, we've teamed up with dedicated local fundraisers who share our commitment to creating a brighter future for all. This collaboration aims to amplify our collective efforts and uplift the lives of those residing in Bali. 
+            </p>
+            <p>
+              Our event, set to take place at Love Bali Villas, promises an exciting array of activities and experiences. From interactive workshops, an artisanal craft fair, and delectable local cuisine, to live entertainment, a dedicated children's corner, and a charity auction, there are numerous ways to participate and contribute. With a commitment to match a percentage of all funds raised during this collaboration, Love Bali Villas ensures that every donation and purchase made will go a long way in supporting our partner fundraisers and their vital community causes. Join us for a day of celebration, learning, and community-building, as together, we can make a tangible difference in Bali and demonstrate our love for this enchanting island.
+
+Stay tuned for more updates and follow us on social media for the latest news and announcements. With your involvement, we can create a more sustainable and compassionate Bali, showing the world that unity and love have the power to transform communities for the better. #LoveBaliVillas #CommunityCollaboration #BaliBrighterFuture
+            </p>
+              </div>
+            </div>
+          </div><!-- End .content-->
         </div>
-
-        <div class="row">
-
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="member">
-              <img src="assets/img/team/Copy of IMG_0578.jpeg" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Aliansyah Fernando</h4>
-                  <span>Founder & Chief Executive Officer</span>
-                  <div class="social">
-                    <a href="https://twitter.com/UpdateMymusic" target="_blank" ><i class="bi bi-twitter"></i></a>
-                    <a href="https://web.facebook.com/aliansyahfernandosiahaan93/" target="_blank" ><i class="bi bi-facebook"></i></a>
-                    <a href="https://instagram.com/anyadya_official" target="_blank" ><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/aliansyah-aliansyah-0b3973182/" target="_blank" ><i class="bi bi-linkedin"></i></a>
-                  </div>
       </div>
-    </section><!-- End Team Section -->
+
+    </div>
+  </section><!-- End About Section -->
+
+      <!-- ======= About 2 Section ======= -->
+      <section id="about" class="about">
+        <div class="container">
+  
+          <div class="row no-gutters">
+            <div class="image2 col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
+            <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
+              <div class="content d-flex flex-column justify-content-center">
+                <h3> Rescue 2000 </h3>
+                <p>
+                  Our first fundraiser will focus on building homes for families in need. Many Balinese families still lack proper housing, and with your support, we aim to provide safe and comfortable homes for those less fortunate. Together, we can make a difference and provide a brighter future for these families. In addition to housing, Love Bali Villas is committed to addressing food insecurity in Bali. Our second fundraiser will be dedicated to establishing community food programs. We believe that no one should go to bed hungry, and by partnering with local organizations, we can create sustainable solutions to ensure that nutritious food reaches those in need. Your contribution will help us provide meals to children, families, and individuals who struggle with food insecurity, promoting a healthier and happier Bali.
+                </p>
+               <P> GO FUND HERE  <i class="bx bx-money-withdraw"> </i> <a href="https://www.instagram.com/rescue_2000/">@Rescue2000</a></P>
+                  </div>
+                </div>
+              </div><!-- End .content-->
+            </div>
+          </div>
+  
+        </div>
+      </section><!-- End About Section -->
+
+              <!-- ======= About 3 Section ======= -->
+              <section id="about" class="about">
+                <div class="container">
+          
+                  <div class="row no-gutters">
+                    <div class="image3 col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
+                    <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
+                      <div class="content d-flex flex-column justify-content-center">
+                        <h3>Rice For Bali</h3>
+                        <p>
+                          Our second fundraiser will be dedicated to establishing community food programs. We believe that no one should go to bed hungry, and by partnering with local organizations, we can create sustainable solutions to ensure that nutritious food reaches those in need. Your contribution will help us provide meals to children, families, and individuals who struggle with food insecurity, promoting a healthier and happier Bali.
+                        </p>
+                        <P> GO FUND HERE  <i class="bx bx-money-withdraw"> </i> <a href="https://www.instagram.com/rice_forbali/">@RiceForBali</a></P>
+                          </div>
+                        </div>
+                      </div><!-- End .content-->
+                    </div>
+                  </div>
+          
+                </div>
+              </section><!-- End About Section -->
+
 
    
     <!-- ======= Frequently Asked Questions Section ======= -->
