--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@ Stay tuned for more updates and follow us on social media for the latest news an
                 <p>
                   Our first fundraiser will focus on building homes for families in need. Many Balinese families still lack proper housing, and with your support, we aim to provide safe and comfortable homes for those less fortunate. Together, we can make a difference and provide a brighter future for these families. In addition to housing, Love Bali Villas is committed to addressing food insecurity in Bali. Our second fundraiser will be dedicated to establishing community food programs. We believe that no one should go to bed hungry, and by partnering with local organizations, we can create sustainable solutions to ensure that nutritious food reaches those in need. Your contribution will help us provide meals to children, families, and individuals who struggle with food insecurity, promoting a healthier and happier Bali.
                 </p>
-               <P> GO FUND HERE  <i class="bx bx-money-withdraw"> </i> <a href="https://www.instagram.com/rescue_2000/">@Rescue2000</a></P>
+               <P> SEE MORE HERE  <i class="bx bx-money-withdraw"> </i> <a href="https://fundraisers.lovebalivillas.pro/">MORE HERE</a></P>
                   </div>
                 </div>
               </div><!-- End .content-->
@@ -800,8 +800,8 @@ Stay tuned for more updates and follow us on social media for the latest news an
                         <p>
                           Our second fundraiser will be dedicated to establishing community food programs. We believe that no one should go to bed hungry, and by partnering with local organizations, we can create sustainable solutions to ensure that nutritious food reaches those in need. Your contribution will help us provide meals to children, families, and individuals who struggle with food insecurity, promoting a healthier and happier Bali.
                         </p>
-                        <P> GO FUND HERE  <i class="bx bx-money-withdraw"> </i> <a href="https://www.instagram.com/rice_forbali/">@RiceForBali</a></P>
-                          </div>
+                        <P> SEE MORE HERE  <i class="bx bx-money-withdraw"> </i> <a href="https://fundraisers.lovebalivillas.pro/">MORE HERE</a></P>
+                      </div>
                         </div>
                       </div><!-- End .content-->
                     </div>
